// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Apple Should render about this mac correctly 1`] = `
<div>
  <button
    aria-controls="menu-list-:rp:"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="apple-top-bar-button"
    class="chakra-menu__menu-button css-10l0d22"
    id="menu-button-:rp:"
  >
    <span
      class="css-xl71ch"
    >
      <svg
        color="#000000"
        fill="currentColor"
        height="1.5em"
        viewBox="0 0 1024 1024"
        width="1.5em"
      >
        <path
          d="M747.4 535.7c-.4-68.2 30.5-119.6 92.9-157.5-34.9-50-87.7-77.5-157.3-82.8-65.9-5.2-138 38.4-164.4 38.4-27.9 0-91.7-36.6-141.9-36.6C273.1 298.8 163 379.8 163 544.6c0 48.7 8.9 99 26.7 150.8 23.8 68.2 109.6 235.3 199.1 232.6 46.8-1.1 79.9-33.2 140.8-33.2 59.1 0 89.7 33.2 141.9 33.2 90.3-1.3 167.9-153.2 190.5-221.6-121.1-57.1-114.6-167.2-114.6-170.7zm-105.1-305c50.7-60.2 46.1-115 44.6-134.7-44.8 2.6-96.6 30.5-126.1 64.8-32.5 36.8-51.6 82.3-47.5 133.6 48.4 3.7 92.6-21.2 129-63.7z"
        />
      </svg>
    </span>
  </button>
  <div
    class="css-0"
    data-popper-escaped=""
    data-popper-placement="bottom-start"
    data-popper-reference-hidden=""
    style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 8px); --popper-transform-origin: top left;"
  >
    <div
      aria-orientation="vertical"
      class="chakra-menu__menu-list css-f6jf1x"
      id="menu-list-:rp:"
      role="menu"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
      tabindex="-1"
    >
      <button
        aria-label="about-this-mac"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="0"
        id="menu-list-:rp:-menuitem-:rq:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        About This Mac
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="system-settings"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="1"
        id="menu-list-:rp:-menuitem-:rr:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        System Settings...
      </button>
      <button
        aria-label="app-store"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="2"
        id="menu-list-:rp:-menuitem-:rs:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        App Store...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="recent-items"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="3"
        id="menu-list-:rp:-menuitem-:rt:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Recent Items
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          &gt;
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="force-quit"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="4"
        id="menu-list-:rp:-menuitem-:ru:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Force Quit...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌥⌘⎋
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="sleep"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="5"
        id="menu-list-:rp:-menuitem-:rv:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Sleep
      </button>
      <button
        aria-label="restart"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="6"
        id="menu-list-:rp:-menuitem-:r10:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Restart...
      </button>
      <button
        aria-label="shutDown"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="7"
        id="menu-list-:rp:-menuitem-:r11:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Shut Down...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="lock-screen"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="8"
        id="menu-list-:rp:-menuitem-:r12:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Lock Screen
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌃⇧Q
        </span>
      </button>
      <button
        aria-label="logout"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="9"
        id="menu-list-:rp:-menuitem-:r13:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Log out Amit Raikwar...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌘⇧Q
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Apple Should render app store correctly 1`] = `
<div>
  <button
    aria-controls="menu-list-:r1h:"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="apple-top-bar-button"
    class="chakra-menu__menu-button css-10l0d22"
    id="menu-button-:r1h:"
  >
    <span
      class="css-xl71ch"
    >
      <svg
        color="#000000"
        fill="currentColor"
        height="1.5em"
        viewBox="0 0 1024 1024"
        width="1.5em"
      >
        <path
          d="M747.4 535.7c-.4-68.2 30.5-119.6 92.9-157.5-34.9-50-87.7-77.5-157.3-82.8-65.9-5.2-138 38.4-164.4 38.4-27.9 0-91.7-36.6-141.9-36.6C273.1 298.8 163 379.8 163 544.6c0 48.7 8.9 99 26.7 150.8 23.8 68.2 109.6 235.3 199.1 232.6 46.8-1.1 79.9-33.2 140.8-33.2 59.1 0 89.7 33.2 141.9 33.2 90.3-1.3 167.9-153.2 190.5-221.6-121.1-57.1-114.6-167.2-114.6-170.7zm-105.1-305c50.7-60.2 46.1-115 44.6-134.7-44.8 2.6-96.6 30.5-126.1 64.8-32.5 36.8-51.6 82.3-47.5 133.6 48.4 3.7 92.6-21.2 129-63.7z"
        />
      </svg>
    </span>
  </button>
  <div
    class="css-0"
    data-popper-escaped=""
    data-popper-placement="bottom-start"
    data-popper-reference-hidden=""
    style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 8px); --popper-transform-origin: top left;"
  >
    <div
      aria-orientation="vertical"
      class="chakra-menu__menu-list css-f6jf1x"
      id="menu-list-:r1h:"
      role="menu"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
      tabindex="-1"
    >
      <button
        aria-label="about-this-mac"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="0"
        id="menu-list-:r1h:-menuitem-:r1i:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        About This Mac
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="system-settings"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="1"
        id="menu-list-:r1h:-menuitem-:r1j:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        System Settings...
      </button>
      <button
        aria-label="app-store"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="2"
        id="menu-list-:r1h:-menuitem-:r1k:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        App Store...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="recent-items"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="3"
        id="menu-list-:r1h:-menuitem-:r1l:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Recent Items
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          &gt;
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="force-quit"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="4"
        id="menu-list-:r1h:-menuitem-:r1m:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Force Quit...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌥⌘⎋
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="sleep"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="5"
        id="menu-list-:r1h:-menuitem-:r1n:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Sleep
      </button>
      <button
        aria-label="restart"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="6"
        id="menu-list-:r1h:-menuitem-:r1o:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Restart...
      </button>
      <button
        aria-label="shutDown"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="7"
        id="menu-list-:r1h:-menuitem-:r1p:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Shut Down...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="lock-screen"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="8"
        id="menu-list-:r1h:-menuitem-:r1q:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Lock Screen
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌃⇧Q
        </span>
      </button>
      <button
        aria-label="logout"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="9"
        id="menu-list-:r1h:-menuitem-:r1r:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Log out Amit Raikwar...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌘⇧Q
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Apple Should render apple button correctly 1`] = `
<div>
  <button
    aria-controls="menu-list-:r1:"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="apple-top-bar-button"
    class="chakra-menu__menu-button css-10l0d22"
    id="menu-button-:r1:"
  >
    <span
      class="css-xl71ch"
    >
      <svg
        color="#000000"
        fill="currentColor"
        height="1.5em"
        viewBox="0 0 1024 1024"
        width="1.5em"
      >
        <path
          d="M747.4 535.7c-.4-68.2 30.5-119.6 92.9-157.5-34.9-50-87.7-77.5-157.3-82.8-65.9-5.2-138 38.4-164.4 38.4-27.9 0-91.7-36.6-141.9-36.6C273.1 298.8 163 379.8 163 544.6c0 48.7 8.9 99 26.7 150.8 23.8 68.2 109.6 235.3 199.1 232.6 46.8-1.1 79.9-33.2 140.8-33.2 59.1 0 89.7 33.2 141.9 33.2 90.3-1.3 167.9-153.2 190.5-221.6-121.1-57.1-114.6-167.2-114.6-170.7zm-105.1-305c50.7-60.2 46.1-115 44.6-134.7-44.8 2.6-96.6 30.5-126.1 64.8-32.5 36.8-51.6 82.3-47.5 133.6 48.4 3.7 92.6-21.2 129-63.7z"
        />
      </svg>
    </span>
  </button>
  <div
    class="css-0"
    style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0;"
  >
    <div
      aria-orientation="vertical"
      class="chakra-menu__menu-list css-f6jf1x"
      id="menu-list-:r1:"
      role="menu"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
      tabindex="-1"
    >
      <button
        aria-label="about-this-mac"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="0"
        id="menu-list-:r1:-menuitem-:r2:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        About This Mac
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="system-settings"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="1"
        id="menu-list-:r1:-menuitem-:r3:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        System Settings...
      </button>
      <button
        aria-label="app-store"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="2"
        id="menu-list-:r1:-menuitem-:r4:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        App Store...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="recent-items"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="3"
        id="menu-list-:r1:-menuitem-:r5:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Recent Items
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          &gt;
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="force-quit"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="4"
        id="menu-list-:r1:-menuitem-:r6:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Force Quit...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌥⌘⎋
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="sleep"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="5"
        id="menu-list-:r1:-menuitem-:r7:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Sleep
      </button>
      <button
        aria-label="restart"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="6"
        id="menu-list-:r1:-menuitem-:r8:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Restart...
      </button>
      <button
        aria-label="shutDown"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="7"
        id="menu-list-:r1:-menuitem-:r9:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Shut Down...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="lock-screen"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="8"
        id="menu-list-:r1:-menuitem-:ra:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Lock Screen
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌃⇧Q
        </span>
      </button>
      <button
        aria-label="logout"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="9"
        id="menu-list-:r1:-menuitem-:rb:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Log out Amit Raikwar...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌘⇧Q
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Apple Should render apple menu correctly 1`] = `
<div>
  <button
    aria-controls="menu-list-:rd:"
    aria-expanded="true"
    aria-haspopup="menu"
    aria-label="apple-top-bar-button"
    class="chakra-menu__menu-button css-10l0d22"
    data-active=""
    id="menu-button-:rd:"
  >
    <span
      class="css-xl71ch"
    >
      <svg
        color="#000000"
        fill="currentColor"
        height="1.5em"
        viewBox="0 0 1024 1024"
        width="1.5em"
      >
        <path
          d="M747.4 535.7c-.4-68.2 30.5-119.6 92.9-157.5-34.9-50-87.7-77.5-157.3-82.8-65.9-5.2-138 38.4-164.4 38.4-27.9 0-91.7-36.6-141.9-36.6C273.1 298.8 163 379.8 163 544.6c0 48.7 8.9 99 26.7 150.8 23.8 68.2 109.6 235.3 199.1 232.6 46.8-1.1 79.9-33.2 140.8-33.2 59.1 0 89.7 33.2 141.9 33.2 90.3-1.3 167.9-153.2 190.5-221.6-121.1-57.1-114.6-167.2-114.6-170.7zm-105.1-305c50.7-60.2 46.1-115 44.6-134.7-44.8 2.6-96.6 30.5-126.1 64.8-32.5 36.8-51.6 82.3-47.5 133.6 48.4 3.7 92.6-21.2 129-63.7z"
        />
      </svg>
    </span>
  </button>
  <div
    class="css-0"
    data-popper-escaped=""
    data-popper-placement="bottom-start"
    data-popper-reference-hidden=""
    style="visibility: visible; position: absolute; min-width: max-content; inset: 0 auto auto 0; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 8px); --popper-transform-origin: top left;"
  >
    <div
      aria-orientation="vertical"
      class="chakra-menu__menu-list css-f6jf1x"
      id="menu-list-:rd:"
      role="menu"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
      tabindex="-1"
    >
      <button
        aria-label="about-this-mac"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="0"
        id="menu-list-:rd:-menuitem-:re:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        About This Mac
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="system-settings"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="1"
        id="menu-list-:rd:-menuitem-:rf:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        System Settings...
      </button>
      <button
        aria-label="app-store"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="2"
        id="menu-list-:rd:-menuitem-:rg:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        App Store...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="recent-items"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="3"
        id="menu-list-:rd:-menuitem-:rh:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Recent Items
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          &gt;
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="force-quit"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="4"
        id="menu-list-:rd:-menuitem-:ri:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Force Quit...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌥⌘⎋
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="sleep"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="5"
        id="menu-list-:rd:-menuitem-:rj:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Sleep
      </button>
      <button
        aria-label="restart"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="6"
        id="menu-list-:rd:-menuitem-:rk:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Restart...
      </button>
      <button
        aria-label="shutDown"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="7"
        id="menu-list-:rd:-menuitem-:rl:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Shut Down...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="lock-screen"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="8"
        id="menu-list-:rd:-menuitem-:rm:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Lock Screen
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌃⇧Q
        </span>
      </button>
      <button
        aria-label="logout"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="9"
        id="menu-list-:rd:-menuitem-:rn:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Log out Amit Raikwar...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌘⇧Q
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Apple Should render force quit correctly 1`] = `
<div>
  <button
    aria-controls="menu-list-:r29:"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="apple-top-bar-button"
    class="chakra-menu__menu-button css-10l0d22"
    id="menu-button-:r29:"
  >
    <span
      class="css-xl71ch"
    >
      <svg
        color="#000000"
        fill="currentColor"
        height="1.5em"
        viewBox="0 0 1024 1024"
        width="1.5em"
      >
        <path
          d="M747.4 535.7c-.4-68.2 30.5-119.6 92.9-157.5-34.9-50-87.7-77.5-157.3-82.8-65.9-5.2-138 38.4-164.4 38.4-27.9 0-91.7-36.6-141.9-36.6C273.1 298.8 163 379.8 163 544.6c0 48.7 8.9 99 26.7 150.8 23.8 68.2 109.6 235.3 199.1 232.6 46.8-1.1 79.9-33.2 140.8-33.2 59.1 0 89.7 33.2 141.9 33.2 90.3-1.3 167.9-153.2 190.5-221.6-121.1-57.1-114.6-167.2-114.6-170.7zm-105.1-305c50.7-60.2 46.1-115 44.6-134.7-44.8 2.6-96.6 30.5-126.1 64.8-32.5 36.8-51.6 82.3-47.5 133.6 48.4 3.7 92.6-21.2 129-63.7z"
        />
      </svg>
    </span>
  </button>
  <div
    class="css-0"
    data-popper-escaped=""
    data-popper-placement="bottom-start"
    data-popper-reference-hidden=""
    style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 8px); --popper-transform-origin: top left;"
  >
    <div
      aria-orientation="vertical"
      class="chakra-menu__menu-list css-f6jf1x"
      id="menu-list-:r29:"
      role="menu"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
      tabindex="-1"
    >
      <button
        aria-label="about-this-mac"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="0"
        id="menu-list-:r29:-menuitem-:r2a:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        About This Mac
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="system-settings"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="1"
        id="menu-list-:r29:-menuitem-:r2b:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        System Settings...
      </button>
      <button
        aria-label="app-store"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="2"
        id="menu-list-:r29:-menuitem-:r2c:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        App Store...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="recent-items"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="3"
        id="menu-list-:r29:-menuitem-:r2d:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Recent Items
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          &gt;
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="force-quit"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="4"
        id="menu-list-:r29:-menuitem-:r2e:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Force Quit...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌥⌘⎋
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="sleep"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="5"
        id="menu-list-:r29:-menuitem-:r2f:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Sleep
      </button>
      <button
        aria-label="restart"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="6"
        id="menu-list-:r29:-menuitem-:r2g:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Restart...
      </button>
      <button
        aria-label="shutDown"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="7"
        id="menu-list-:r29:-menuitem-:r2h:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Shut Down...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="lock-screen"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="8"
        id="menu-list-:r29:-menuitem-:r2i:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Lock Screen
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌃⇧Q
        </span>
      </button>
      <button
        aria-label="logout"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="9"
        id="menu-list-:r29:-menuitem-:r2j:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Log out Amit Raikwar...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌘⇧Q
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Apple Should render recent items correctly 1`] = `
<div>
  <button
    aria-controls="menu-list-:r1t:"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="apple-top-bar-button"
    class="chakra-menu__menu-button css-10l0d22"
    id="menu-button-:r1t:"
  >
    <span
      class="css-xl71ch"
    >
      <svg
        color="#000000"
        fill="currentColor"
        height="1.5em"
        viewBox="0 0 1024 1024"
        width="1.5em"
      >
        <path
          d="M747.4 535.7c-.4-68.2 30.5-119.6 92.9-157.5-34.9-50-87.7-77.5-157.3-82.8-65.9-5.2-138 38.4-164.4 38.4-27.9 0-91.7-36.6-141.9-36.6C273.1 298.8 163 379.8 163 544.6c0 48.7 8.9 99 26.7 150.8 23.8 68.2 109.6 235.3 199.1 232.6 46.8-1.1 79.9-33.2 140.8-33.2 59.1 0 89.7 33.2 141.9 33.2 90.3-1.3 167.9-153.2 190.5-221.6-121.1-57.1-114.6-167.2-114.6-170.7zm-105.1-305c50.7-60.2 46.1-115 44.6-134.7-44.8 2.6-96.6 30.5-126.1 64.8-32.5 36.8-51.6 82.3-47.5 133.6 48.4 3.7 92.6-21.2 129-63.7z"
        />
      </svg>
    </span>
  </button>
  <div
    class="css-0"
    data-popper-escaped=""
    data-popper-placement="bottom-start"
    data-popper-reference-hidden=""
    style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 8px); --popper-transform-origin: top left;"
  >
    <div
      aria-orientation="vertical"
      class="chakra-menu__menu-list css-f6jf1x"
      id="menu-list-:r1t:"
      role="menu"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
      tabindex="-1"
    >
      <button
        aria-label="about-this-mac"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="0"
        id="menu-list-:r1t:-menuitem-:r1u:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        About This Mac
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="system-settings"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="1"
        id="menu-list-:r1t:-menuitem-:r1v:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        System Settings...
      </button>
      <button
        aria-label="app-store"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="2"
        id="menu-list-:r1t:-menuitem-:r20:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        App Store...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="recent-items"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="3"
        id="menu-list-:r1t:-menuitem-:r21:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Recent Items
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          &gt;
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="force-quit"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="4"
        id="menu-list-:r1t:-menuitem-:r22:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Force Quit...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌥⌘⎋
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="sleep"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="5"
        id="menu-list-:r1t:-menuitem-:r23:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Sleep
      </button>
      <button
        aria-label="restart"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="6"
        id="menu-list-:r1t:-menuitem-:r24:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Restart...
      </button>
      <button
        aria-label="shutDown"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="7"
        id="menu-list-:r1t:-menuitem-:r25:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Shut Down...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="lock-screen"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="8"
        id="menu-list-:r1t:-menuitem-:r26:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Lock Screen
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌃⇧Q
        </span>
      </button>
      <button
        aria-label="logout"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="9"
        id="menu-list-:r1t:-menuitem-:r27:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Log out Amit Raikwar...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌘⇧Q
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Apple Should render restart correctly 1`] = `
<div>
  <button
    aria-controls="menu-list-:r31:"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="apple-top-bar-button"
    class="chakra-menu__menu-button css-10l0d22"
    id="menu-button-:r31:"
  >
    <span
      class="css-xl71ch"
    >
      <svg
        color="#000000"
        fill="currentColor"
        height="1.5em"
        viewBox="0 0 1024 1024"
        width="1.5em"
      >
        <path
          d="M747.4 535.7c-.4-68.2 30.5-119.6 92.9-157.5-34.9-50-87.7-77.5-157.3-82.8-65.9-5.2-138 38.4-164.4 38.4-27.9 0-91.7-36.6-141.9-36.6C273.1 298.8 163 379.8 163 544.6c0 48.7 8.9 99 26.7 150.8 23.8 68.2 109.6 235.3 199.1 232.6 46.8-1.1 79.9-33.2 140.8-33.2 59.1 0 89.7 33.2 141.9 33.2 90.3-1.3 167.9-153.2 190.5-221.6-121.1-57.1-114.6-167.2-114.6-170.7zm-105.1-305c50.7-60.2 46.1-115 44.6-134.7-44.8 2.6-96.6 30.5-126.1 64.8-32.5 36.8-51.6 82.3-47.5 133.6 48.4 3.7 92.6-21.2 129-63.7z"
        />
      </svg>
    </span>
  </button>
  <div
    class="css-0"
    data-popper-escaped=""
    data-popper-placement="bottom-start"
    data-popper-reference-hidden=""
    style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 8px); --popper-transform-origin: top left;"
  >
    <div
      aria-orientation="vertical"
      class="chakra-menu__menu-list css-f6jf1x"
      id="menu-list-:r31:"
      role="menu"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
      tabindex="-1"
    >
      <button
        aria-label="about-this-mac"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="0"
        id="menu-list-:r31:-menuitem-:r32:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        About This Mac
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="system-settings"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="1"
        id="menu-list-:r31:-menuitem-:r33:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        System Settings...
      </button>
      <button
        aria-label="app-store"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="2"
        id="menu-list-:r31:-menuitem-:r34:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        App Store...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="recent-items"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="3"
        id="menu-list-:r31:-menuitem-:r35:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Recent Items
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          &gt;
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="force-quit"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="4"
        id="menu-list-:r31:-menuitem-:r36:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Force Quit...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌥⌘⎋
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="sleep"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="5"
        id="menu-list-:r31:-menuitem-:r37:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Sleep
      </button>
      <button
        aria-label="restart"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="6"
        id="menu-list-:r31:-menuitem-:r38:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Restart...
      </button>
      <button
        aria-label="shutDown"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="7"
        id="menu-list-:r31:-menuitem-:r39:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Shut Down...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="lock-screen"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="8"
        id="menu-list-:r31:-menuitem-:r3a:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Lock Screen
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌃⇧Q
        </span>
      </button>
      <button
        aria-label="logout"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="9"
        id="menu-list-:r31:-menuitem-:r3b:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Log out Amit Raikwar...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌘⇧Q
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Apple Should render shut down correctly 1`] = `
<div>
  <button
    aria-controls="menu-list-:r3d:"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="apple-top-bar-button"
    class="chakra-menu__menu-button css-10l0d22"
    id="menu-button-:r3d:"
  >
    <span
      class="css-xl71ch"
    >
      <svg
        color="#000000"
        fill="currentColor"
        height="1.5em"
        viewBox="0 0 1024 1024"
        width="1.5em"
      >
        <path
          d="M747.4 535.7c-.4-68.2 30.5-119.6 92.9-157.5-34.9-50-87.7-77.5-157.3-82.8-65.9-5.2-138 38.4-164.4 38.4-27.9 0-91.7-36.6-141.9-36.6C273.1 298.8 163 379.8 163 544.6c0 48.7 8.9 99 26.7 150.8 23.8 68.2 109.6 235.3 199.1 232.6 46.8-1.1 79.9-33.2 140.8-33.2 59.1 0 89.7 33.2 141.9 33.2 90.3-1.3 167.9-153.2 190.5-221.6-121.1-57.1-114.6-167.2-114.6-170.7zm-105.1-305c50.7-60.2 46.1-115 44.6-134.7-44.8 2.6-96.6 30.5-126.1 64.8-32.5 36.8-51.6 82.3-47.5 133.6 48.4 3.7 92.6-21.2 129-63.7z"
        />
      </svg>
    </span>
  </button>
  <div
    class="css-0"
    data-popper-escaped=""
    data-popper-placement="bottom-start"
    data-popper-reference-hidden=""
    style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 8px); --popper-transform-origin: top left;"
  >
    <div
      aria-orientation="vertical"
      class="chakra-menu__menu-list css-f6jf1x"
      id="menu-list-:r3d:"
      role="menu"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
      tabindex="-1"
    >
      <button
        aria-label="about-this-mac"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="0"
        id="menu-list-:r3d:-menuitem-:r3e:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        About This Mac
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="system-settings"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="1"
        id="menu-list-:r3d:-menuitem-:r3f:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        System Settings...
      </button>
      <button
        aria-label="app-store"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="2"
        id="menu-list-:r3d:-menuitem-:r3g:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        App Store...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="recent-items"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="3"
        id="menu-list-:r3d:-menuitem-:r3h:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Recent Items
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          &gt;
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="force-quit"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="4"
        id="menu-list-:r3d:-menuitem-:r3i:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Force Quit...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌥⌘⎋
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="sleep"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="5"
        id="menu-list-:r3d:-menuitem-:r3j:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Sleep
      </button>
      <button
        aria-label="restart"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="6"
        id="menu-list-:r3d:-menuitem-:r3k:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Restart...
      </button>
      <button
        aria-label="shutDown"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="7"
        id="menu-list-:r3d:-menuitem-:r3l:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Shut Down...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="lock-screen"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="8"
        id="menu-list-:r3d:-menuitem-:r3m:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Lock Screen
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌃⇧Q
        </span>
      </button>
      <button
        aria-label="logout"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="9"
        id="menu-list-:r3d:-menuitem-:r3n:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Log out Amit Raikwar...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌘⇧Q
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Apple Should render sleep correctly 1`] = `
<div>
  <button
    aria-controls="menu-list-:r2l:"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="apple-top-bar-button"
    class="chakra-menu__menu-button css-10l0d22"
    id="menu-button-:r2l:"
  >
    <span
      class="css-xl71ch"
    >
      <svg
        color="#000000"
        fill="currentColor"
        height="1.5em"
        viewBox="0 0 1024 1024"
        width="1.5em"
      >
        <path
          d="M747.4 535.7c-.4-68.2 30.5-119.6 92.9-157.5-34.9-50-87.7-77.5-157.3-82.8-65.9-5.2-138 38.4-164.4 38.4-27.9 0-91.7-36.6-141.9-36.6C273.1 298.8 163 379.8 163 544.6c0 48.7 8.9 99 26.7 150.8 23.8 68.2 109.6 235.3 199.1 232.6 46.8-1.1 79.9-33.2 140.8-33.2 59.1 0 89.7 33.2 141.9 33.2 90.3-1.3 167.9-153.2 190.5-221.6-121.1-57.1-114.6-167.2-114.6-170.7zm-105.1-305c50.7-60.2 46.1-115 44.6-134.7-44.8 2.6-96.6 30.5-126.1 64.8-32.5 36.8-51.6 82.3-47.5 133.6 48.4 3.7 92.6-21.2 129-63.7z"
        />
      </svg>
    </span>
  </button>
  <div
    class="css-0"
    data-popper-escaped=""
    data-popper-placement="bottom-start"
    data-popper-reference-hidden=""
    style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 8px); --popper-transform-origin: top left;"
  >
    <div
      aria-orientation="vertical"
      class="chakra-menu__menu-list css-f6jf1x"
      id="menu-list-:r2l:"
      role="menu"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
      tabindex="-1"
    >
      <button
        aria-label="about-this-mac"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="0"
        id="menu-list-:r2l:-menuitem-:r2m:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        About This Mac
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="system-settings"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="1"
        id="menu-list-:r2l:-menuitem-:r2n:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        System Settings...
      </button>
      <button
        aria-label="app-store"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="2"
        id="menu-list-:r2l:-menuitem-:r2o:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        App Store...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="recent-items"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="3"
        id="menu-list-:r2l:-menuitem-:r2p:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Recent Items
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          &gt;
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="force-quit"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="4"
        id="menu-list-:r2l:-menuitem-:r2q:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Force Quit...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌥⌘⎋
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="sleep"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="5"
        id="menu-list-:r2l:-menuitem-:r2r:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Sleep
      </button>
      <button
        aria-label="restart"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="6"
        id="menu-list-:r2l:-menuitem-:r2s:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Restart...
      </button>
      <button
        aria-label="shutDown"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="7"
        id="menu-list-:r2l:-menuitem-:r2t:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Shut Down...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="lock-screen"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="8"
        id="menu-list-:r2l:-menuitem-:r2u:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Lock Screen
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌃⇧Q
        </span>
      </button>
      <button
        aria-label="logout"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="9"
        id="menu-list-:r2l:-menuitem-:r2v:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Log out Amit Raikwar...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌘⇧Q
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Apple Should render system settings correctly 1`] = `
<div>
  <button
    aria-controls="menu-list-:r15:"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="apple-top-bar-button"
    class="chakra-menu__menu-button css-10l0d22"
    id="menu-button-:r15:"
  >
    <span
      class="css-xl71ch"
    >
      <svg
        color="#000000"
        fill="currentColor"
        height="1.5em"
        viewBox="0 0 1024 1024"
        width="1.5em"
      >
        <path
          d="M747.4 535.7c-.4-68.2 30.5-119.6 92.9-157.5-34.9-50-87.7-77.5-157.3-82.8-65.9-5.2-138 38.4-164.4 38.4-27.9 0-91.7-36.6-141.9-36.6C273.1 298.8 163 379.8 163 544.6c0 48.7 8.9 99 26.7 150.8 23.8 68.2 109.6 235.3 199.1 232.6 46.8-1.1 79.9-33.2 140.8-33.2 59.1 0 89.7 33.2 141.9 33.2 90.3-1.3 167.9-153.2 190.5-221.6-121.1-57.1-114.6-167.2-114.6-170.7zm-105.1-305c50.7-60.2 46.1-115 44.6-134.7-44.8 2.6-96.6 30.5-126.1 64.8-32.5 36.8-51.6 82.3-47.5 133.6 48.4 3.7 92.6-21.2 129-63.7z"
        />
      </svg>
    </span>
  </button>
  <div
    class="css-0"
    data-popper-escaped=""
    data-popper-placement="bottom-start"
    data-popper-reference-hidden=""
    style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 8px); --popper-transform-origin: top left;"
  >
    <div
      aria-orientation="vertical"
      class="chakra-menu__menu-list css-f6jf1x"
      id="menu-list-:r15:"
      role="menu"
      style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
      tabindex="-1"
    >
      <button
        aria-label="about-this-mac"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="0"
        id="menu-list-:r15:-menuitem-:r16:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        About This Mac
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="system-settings"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="1"
        id="menu-list-:r15:-menuitem-:r17:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        System Settings...
      </button>
      <button
        aria-label="app-store"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="2"
        id="menu-list-:r15:-menuitem-:r18:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        App Store...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="recent-items"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="3"
        id="menu-list-:r15:-menuitem-:r19:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Recent Items
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          &gt;
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="force-quit"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="4"
        id="menu-list-:r15:-menuitem-:r1a:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Force Quit...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌥⌘⎋
        </span>
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="sleep"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="5"
        id="menu-list-:r15:-menuitem-:r1b:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Sleep
      </button>
      <button
        aria-label="restart"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="6"
        id="menu-list-:r15:-menuitem-:r1c:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Restart...
      </button>
      <button
        aria-label="shutDown"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="7"
        id="menu-list-:r15:-menuitem-:r1d:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        Shut Down...
      </button>
      <hr
        aria-orientation="horizontal"
        class="chakra-menu__divider css-1fmk8qx"
      />
      <button
        aria-label="lock-screen"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="8"
        id="menu-list-:r15:-menuitem-:r1e:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Lock Screen
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌃⇧Q
        </span>
      </button>
      <button
        aria-label="logout"
        class="chakra-menu__menuitem css-sfzsdj"
        data-index="9"
        id="menu-list-:r15:-menuitem-:r1f:"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          style="pointer-events: none; flex: 1;"
        >
          Log out Amit Raikwar...
        </span>
        <span
          class="chakra-menu__command css-8dknqd"
        >
          ⌘⇧Q
        </span>
      </button>
    </div>
  </div>
</div>
`;
